--- a/index.html
+++ b/index.html
@@ -13,8 +13,29 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- base -->
+    <link rel="stylesheet" href="./css/base/base.css">
+    <!-- 3rd party -->
+    <!-- components -->
+    <!-- pages -->
+
 </head>
 <body>
-    CONTENT
+    <main class="main-content">
+        <div class="left-col">
+            <img src="/img/img.jpg" alt="Mountains" style="width: 350px;">
+        </div>
+        <div class="right-col">
+            <form action="#" method="post">
+                <div class="input-list">
+                    <div class="input-field">
+                        <label for="user-name">User name</label>
+                        <input type="text" id="user-name" name="user-name">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
