--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- base -->
     <link rel="stylesheet" href="./css/base/base.css">
+    <link rel="stylesheet" href="./css/base/layout.css">
     <!-- 3rd party -->
     <!-- components -->
     <!-- pages -->
@@ -24,17 +25,35 @@
 <body>
     <main class="main-content">
         <div class="left-col">
-            <img src="/img/img.jpg" alt="Mountains" style="width: 350px;">
+            <h1 class="main-title">Sign up</h1>
+            <p>Privacy policy & terms of service</p>
+            <!-- <img src="/img/img.jpg" alt="Mountains" style="width: 350px;"> -->
         </div>
         <div class="right-col">
-            <form action="#" method="post">
+            <!-- <form action="#" method="post">
                 <div class="input-list">
                     <div class="input-field">
                         <label for="user-name">User name</label>
                         <input type="text" id="user-name" name="user-name">
                     </div>
+                    <div class="input-field">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email">
+                    </div>
+                    <div class="input-field">
+                        <label for="password">Password</label>
+                        <input type="password" id="password" name="password">
+                    </div>
+                    <div class="input-field">
+                        <label for="repeat-psw">Repeat password</label>
+                        <input type="password" id="repeat-psw" name="repeat-psw">
+                    </div>
+                    <div class="buttons">
+                        <button class="btn-1">Get started</button>
+                        <button class="btn-2">or Sign</button>
+                    </div>
                 </div>
-            </form>
+            </form> -->
         </div>
     </main>
 </body>
