add: Left column HTML content #14

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
     <main class="main-content">
         <div class="left-col">
             <h1 class="main-title">Sign up</h1>
-            <p>Privacy policy & terms of service</p>
+            <div class="policies-links">
+                <p><a class="links" href="#">Privacy policy</a> & <a class="links" href="#">terms of service</a></p>
+            </div>
             <!-- <img src="/img/img.jpg" alt="Mountains" style="width: 350px;"> -->
         </div>
         <div class="right-col">
