add: Left column background #15

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
         <div class="left-col">
             <h1 class="main-title">Sign up</h1>
             <div class="policies-links">
-                <p><a class="links" href="#">Privacy policy</a> & <a class="links" href="#">terms of service</a></p>
+                <p><a class="links" href="#">Privacy policy</a> &#38 <a class="links" href="#">terms of service</a></p>
             </div>
-            <!-- <img src="/img/img.jpg" alt="Mountains" style="width: 350px;"> -->
         </div>
         <div class="right-col">
             <!-- <form action="#" method="post">
