ight column HTML structure #16

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="./css/base/layout.css">
     <!-- 3rd party -->
     <!-- components -->
+    <link rel="stylesheet" href="./css/components/button.css">
+    <link rel="stylesheet" href="./css/components/close.css">
+    <link rel="stylesheet" href="./css/components/form.css">
     <!-- pages -->
 
 </head>
@@ -31,30 +34,30 @@
             </div>
         </div>
         <div class="right-col">
-            <!-- <form action="#" method="post">
-                <div class="input-list">
-                    <div class="input-field">
-                        <label for="user-name">User name</label>
-                        <input type="text" id="user-name" name="user-name">
-                    </div>
-                    <div class="input-field">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email">
-                    </div>
-                    <div class="input-field">
-                        <label for="password">Password</label>
-                        <input type="password" id="password" name="password">
-                    </div>
-                    <div class="input-field">
-                        <label for="repeat-psw">Repeat password</label>
-                        <input type="password" id="repeat-psw" name="repeat-psw">
-                    </div>
-                    <div class="buttons">
-                        <button class="btn-1">Get started</button>
-                        <button class="btn-2">or Sign</button>
-                    </div>
+            <div class="close">x</div>
+            <form class="form">
+                <div class="form-row">
+                    <label class="label" for="user-name">User name</label>
+                    <input class="input" type="text" id="user-name" name="user-name" required>
                 </div>
-            </form> -->
+                <div class="form-row">
+                    <label class="label" for="email">E-mail</label>
+                    <input class="input" type="email" id="email" name="email" required>
+                </div>
+                <div class="form-row">
+                    <label class="label" for="password">Password</label>
+                    <input class="input" type="password" id="password" name="password" required>
+                </div>
+                <div class="form-row">
+                    <label class="label" for="repeat-psw">Repeat password</label>
+                    <input class="input" type="password" id="repeat-psw" name="repeat-psw" required>
+                </div>
+                <div class="form-row">
+                    <button type="submit" class="btn">Get started</button>
+                    <span>or</span>
+                    <a href="#">Sign in</a>
+                </div>
+            </form>
         </div>
     </main>
 </body>
